Mellintec Game Archive Index updated: +2 games

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mellintec Games Archive</title>
+    <title>Mellintec Archive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -1682,7 +1682,7 @@
         // Data
         const data = {
             "archive": {
-                "title": "Mellintec Shhh Unblocked Games Archive",
+                "title": "The Mellintec Archive",
                 "year": 2025,
                 "last_update": "2025-12-17",
                 "status": "all working"
@@ -1708,9 +1708,11 @@
                 { "name": "WorldC Games", "url": "https://asmall-worldcup.github.io/", "rating": 7 },
                 { "name": "Unblocked Games 2", "url": "https://sites.google.com/view/2-unblocked-games/home", "rating": 6 },
                 { "name": "UnblockXL", "url": "https://sites.google.com/view/unblockedgamesxl/home", "rating": 6 },
+                { "name": "Bitlife", "url": "https://bitlifefree.io", "rating": 8 },
+                { "name": "Geometry Dash Online", "url": "https://geometrydashlite.de/", "rating": 8 },
                 { "name": "FreezeNova", "url": "https://sites.google.com/view/freezenova/", "rating": 6 }
             ],
-            "top_rated": ["WatchDocs", "Classroom Resources", "Unblocked World", "6x Classroom", "66 Unblocked"]
+            "top_rated": ["WatchDocs", "Classroom Resources", "Unblocked World", "6x Classroom", "Bitlife"]
         };
 
         // State
@@ -2290,4 +2292,5 @@
         });
     </script>
 </body>
+
 </html>
