--- a/index.html
+++ b/index.html
@@ -1709,10 +1709,17 @@
                 { "name": "Unblocked Games 2", "url": "https://sites.google.com/view/2-unblocked-games/home", "rating": 6 },
                 { "name": "UnblockXL", "url": "https://sites.google.com/view/unblockedgamesxl/home", "rating": 6 },
                 { "name": "Bitlife", "url": "https://bitlifefree.io", "rating": 8 },
+                { "name": "Little Alchemy 2", "url": "https://littlealchemy2.com/", "rating": 8 },
+                { "name": "Rooms iOS", "url": "https://rooms.xyz/", "rating": 8 },
                 { "name": "Geometry Dash Online", "url": "https://geometrydashlite.de/", "rating": 8 },
+                { "name": "GSpot Games", "url": "https://geometryspot.com/activities/", "rating": 8 },
+                { "name": "Shellshockers", "url": "https://geometry.monster/", "rating": 9 },
+                { "name": "NFX2", "url": "https://sites.google.com/view/xenfx2", "rating": 8 },
+                { "name": "Strongdog", "url": "https://strongdog.com/", "rating": 8 },
+                { "name": "Chess.com (ORIGINAL)", "url": "https://www.superhardalgebraproblems.com/", "rating": 10 },
                 { "name": "FreezeNova", "url": "https://sites.google.com/view/freezenova/", "rating": 6 }
             ],
-            "top_rated": ["WatchDocs", "Classroom Resources", "Unblocked World", "6x Classroom", "Bitlife"]
+            "top_rated": ["WatchDocs", "Classroom Resources", "Unblocked World", "Chess.com (ORIGINAL)", "6x Classroom"]
         };
 
         // State
@@ -2294,3 +2301,4 @@
 </body>
 
 </html>
+
