Push: fix snowrider url

--- a/index.html
+++ b/index.html
@@ -1692,7 +1692,7 @@
                 { "name": "76 Unblocked", "url": "https://sites.google.com/view/unblocked-game76/home", "rating": 6 },
                 { "name": "66 Unblocked", "url": "https://sites.google.com/site/unblockedgames4me/8", "rating": 7 },
                 { "name": "SlopeRider", "url": "https://sloperider.org", "rating": 10 },
-                { "name": "SlopeRider OG", "url": "https://itsvijaysingh.github.io/Slope-Rider3D", "rating": 9 },
+                { "name": "SlopeRider OG", "url": "https://itsvijaysingh.github.io/Snow-Rider3D/", "rating": 9 },
                 { "name": "6x Classroom", "url": "https://sites.google.com/view/classroom6x/", "rating": 9 },
                 { "name": "77 Unblocked", "url": "https://sites.google.com/site/unblockedgames77/", "rating": 7 },
                 { "name": "Cookie Clicker", "url": "https://cookieclicker.com", "rating": 9 },
@@ -2301,4 +2301,5 @@
 </body>
 
 </html>
+
 
