Push: update top rated, add eaglercraft

--- a/index.html
+++ b/index.html
@@ -1689,6 +1689,7 @@
             },
             "games": [
                 { "name": "67 Unblocked", "url": "https://sites.google.com/site/unblockedgame67/", "rating": 7 },
+                { "name": "Minecraft 1.12.2", "url": "https://mc.appleflyer.xyz/", "rating": 10 },
                 { "name": "76 Unblocked", "url": "https://sites.google.com/view/unblocked-game76/home", "rating": 6 },
                 { "name": "66 Unblocked", "url": "https://sites.google.com/site/unblockedgames4me/8", "rating": 7 },
                 { "name": "SlopeRider", "url": "https://sloperider.org", "rating": 10 },
@@ -1719,7 +1720,7 @@
                 { "name": "Chess.com (ORIGINAL)", "url": "https://www.superhardalgebraproblems.com/", "rating": 10 },
                 { "name": "FreezeNova", "url": "https://sites.google.com/view/freezenova/", "rating": 6 }
             ],
-            "top_rated": ["WatchDocs", "Classroom Resources", "Unblocked World", "Chess.com (ORIGINAL)", "6x Classroom"]
+            "top_rated": ["WatchDocs", "Minecraft 1.12.2", "Chess.com (ORIGINAL)", "Classroom Resources", "6x Classroom"]
         };
 
         // State
@@ -2301,5 +2302,6 @@
 </body>
 
 </html>
+
 
 
