--- a/index.html
+++ b/index.html
@@ -1689,7 +1689,8 @@
             },
             "games": [
                 { "name": "67 Unblocked", "url": "https://sites.google.com/site/unblockedgame67/", "rating": 7 },
-                { "name": "Minecraft 1.12.2", "url": "https://mc.appleflyer.xyz/", "rating": 10 },
+                { "name": "Minecraft 1.12.2", "url": "https://lilmellyfr.github.io/TheMellintecProject/mathequiz.html", "rating": 10 },
+                { "name": "Minecraft 1.12.2 Alternate", "url": "https://mc.appleflyer.xyz/", "rating": 10 },
                 { "name": "76 Unblocked", "url": "https://sites.google.com/view/unblocked-game76/home", "rating": 6 },
                 { "name": "66 Unblocked", "url": "https://sites.google.com/site/unblockedgames4me/8", "rating": 7 },
                 { "name": "SlopeRider", "url": "https://sloperider.org", "rating": 10 },
@@ -2302,6 +2303,7 @@
 </body>
 
 </html>
+
 
 
 
