Push: fix utop rating

--- a/index.html
+++ b/index.html
@@ -1707,7 +1707,7 @@
                 { "name": "WatchDocs", "url": "https://watchdocumentaries.com/games", "rating": 10 },
                 { "name": "Classroom Games", "url": "https://dnrweqffuwjtx.cloudfront.net/new-games/", "rating": 7 },
                 { "name": "50 Unblocked", "url": "https://sites.google.com/site/yourunblockedgames/home", "rating": 5 },
-                { "name": "Unblocked Top", "url": "https://sites.google.com/site/unblockedgamestop/home", "rating": null },
+                { "name": "Unblocked Top", "url": "https://sites.google.com/site/unblockedgamestop/home", "rating": 8 },
                 { "name": "Hooda Unblocked", "url": "https://sites.google.com/view/games-unblockedd", "rating": 4 },
                 { "name": "WorldC Games", "url": "https://asmall-worldcup.github.io/", "rating": 7 },
                 { "name": "Unblocked Games 2", "url": "https://sites.google.com/view/2-unblocked-games/home", "rating": 6 },
